--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 spring.application.name="ms-employees"
 
 ## MySQL DataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/employeedb?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/employeedb?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=admin@@2019
 
 ## JPA
 spring.jpa.show-sql=true
