--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.0.RELEASE</version>
+		<version>2.1.4.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.ms</groupId>
@@ -42,8 +42,17 @@
 		<!-- Add lombok -->
 		<dependency>
 	        <groupId>org.projectlombok</groupId>
-	        <artifactId>lombok</artifactId>
+    		<artifactId>lombok</artifactId>
+    		<version>1.18.10</version><!--$NO-MVN-MAN-VER$-->
+    		<scope>provided</scope>
 	    </dependency>
+	    
+	    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+	    
 		
 	</dependencies>
 
