--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.application.name="ms-employees"
 ## MySQL DataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/employeedb?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=admin@@2019
+spring.datasource.password=admin@2020@
 
 ## JPA
 spring.jpa.show-sql=true
