--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,7 @@ logging.level.org.springframework=DEBUG
 
 ## Port
 server.port=8000
+
+## JWT
+app.jwtSecret= devwithus
+app.jwtExpirationInMs = 604800000
