--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
 		    <artifactId>springfox-bean-validators</artifactId>
 		    <version>2.9.2</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
 	    
 	    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 		<dependency>
