--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
 
 ## LOGs
-logging.level.org.springframework=DEBUG
+#logging.level.org.springframework=DEBUG
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type=TRACE
 
